# 2020-seol_tsp-server

./: README.md  stack.yaml  tsp-server.cabal
src/: Main.hs  TSP.hs  TSPData.hs  TSPMain.hs
