name:                tsp-server
version:             0.1.0.0
synopsis:            A Web API that solves TSP.
description:         A Web API that solves TSP, websockets.
homepage:            https://github.com/githubuser/tsp-server#readme
license:             BSD3
license-file:        LICENSE
author:              Sung E. Choi
maintainer:          sungeunchoi.kr@gamil.com
copyright:           2020 Sung E. Choi
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable tsp-server
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:
    base >= 4.7 && < 5
    , errors
    , bytestring
    , mtl
    , scotty
    , wai
    , wai-extra
    , text
    , protolude
    , warp
    , websockets
    , wai-websockets
    , random
    , MonadRandom
    , containers
    , unordered-containers
    , time
    , mmorph
    , sort
  other-modules:
    Shuffle
    , TSP
    , TSPData

executable tsp
  hs-source-dirs:      src
  main-is:             TSPMain.hs
  ghc-options:         -main-is TSPMain
  default-language:    Haskell2010
  build-depends:
    base >= 4.7 && < 5
    , mtl
    , random
    , MonadRandom
    , containers
    , time
    , mmorph
    , sort
  other-modules:
    Shuffle
    , TSP
    , TSPData
